Pom changes and Readme